<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appbackground"
        android:orientation="vertical"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/padding_side">

                <ImageView
                    android:id="@+id/img_splash_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.498"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:hint="@string/email"
                    app:fontFamily="@font/regular" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:fontFamily="@font/regular" />


                <TextView
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginTop="@dimen/margin_big"
                    android:padding="@dimen/padding_small"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_big" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/button_ripple"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    app:fontFamily="@font/bold" />


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/button_ripple"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    app:fontFamily="@font/bold" />


            </LinearLayout>
        </RelativeLayout>


    </ScrollView>
</LinearLayout>
